# noir-bb

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/hello_world/: run_hello_world.py
examples/recursion/: run_recursion.py
examples/recursion/circuits/inner/: Nargo.toml
examples/recursion/circuits/recursive/: Nargo.toml
examples/recursion/circuits/recursive/src/: main.nr
examples/recursive_aggregation/: run_recursive_aggregation.py
examples/recursive_aggregation/circuits/main/: Nargo.toml
examples/recursive_aggregation/circuits/main/src/: main.nr
examples/recursive_aggregation/circuits/recursive/: Nargo.toml  Prover.toml
examples/recursive_aggregation/circuits/recursive/src/: main.nr
src/noir_bb/: __init__.py  _msgpack.py  abi.py  artifacts.py  bb.py  errors.py  msgpack_api.py  nargo.py  recursion.py  runner.py
tests/: conftest.py  test_abi.py  test_artifacts.py  test_bb_legacy.py  test_bb_modern.py  test_msgpack_api.py  test_nargo.py  test_recursion.py  test_runner.py
tests/fakebin/: bb  nargo
